--- a/src/net/sf/egonet/web/panel/TimeUnitsPanel.html
+++ b/src/net/sf/egonet/web/panel/TimeUnitsPanel.html
@@ -3,7 +3,7 @@
 <!-- to specify which time units are available -->
 <!-- KCN May 24 2010 -->
 
-<wicket:panel wicekt:id="timeUnitsPanel" >
+<wicket:panel wicket:id="timeUnitsPanel" >
     <form wicket:id = "timeUnitsForm" >
     <table border="0">
         <tr><td>Units:</td>
