default button changed to New Question, keyboard focus reatined better

--- a/src/net/sf/egonet/web/panel/InterviewingPanel.html
+++ b/src/net/sf/egonet/web/panel/InterviewingPanel.html
@@ -15,7 +15,11 @@
 	</table>
 	
 	<br />
-	
+<!-- we may want to replace the Don't know & Refuse check boxes with buttons                       -->	
+<!--	<input wicket:id="btnDontKnow" style="margin-left:2em" type="submit" value="Don't know" /> -->
+<!--	&nbsp;&nbsp;                                                                               -->
+<!--	<input wicket:id="btnRefuse"   type="submit" value="Refuse"/>                              -->
+<!--	<br />                                                                                     -->
 	<span wicket:id="refDKCheck" style="margin-left:10em">Refuse and dont know checkboxes</span>
 
 </wicket:panel>
