--- a/src/net/sf/egonet/web/panel/ExpressionsPanel.html
+++ b/src/net/sf/egonet/web/panel/ExpressionsPanel.html
@@ -8,29 +8,31 @@
     			<tr wicket:id="expressions">
     				<td><a href="#" wicket:id="editExpressionLink"><span wicket:id="expressionName">elligible</span></a></td>
     				<td wicket:id="expressionDescription">Simple(age): GreaterThan 21</td>
+    				<td><a href="#" wicket:id="moveUpExpressionLink">Move up</a></td>
+    				<td style="color:white">___</td>
     				<td><a href="#" wicket:id="deleteExpressionLink">Delete</a></td>
     			</tr>
     			<tr>
-    				<td colspan="3">
+    				<td colspan="5">
     					<input wicket:id="newSimpleExpression" type="submit" value="New simple expression"/>
     					about
     	 				<select wicket:id="questionField" id="questionField" />
     				</td>
     			</tr>
     			<tr>
-    				<td colspan="3">
+    				<td colspan="5">
     					<input wicket:id="newCompoundExpression" type="submit" value="New compound expression"/>
     				</td>
     			</tr>
     			<tr>
-    				<td colspan="3">
+    				<td colspan="5">
     					<input wicket:id="newComparisonExpression" type="submit" value="New comparison expression"/>
     					about
     	 				<select wicket:id="comparisonTopicField" id="comparisonTopicField" />
     				</td>
     			</tr>
     			<tr>
-    				<td colspan="3">
+    				<td colspan="5">
     					<input wicket:id="newCountingExpression" type="submit" value="New counting expression"/>
     				</td>
     			</tr>
