--- a/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
@@ -1,5 +1,15 @@
 <wicket:extend>
-	<span wicket:id="answer" /><br /><br />
+	<br />
+	<span wicket:id="answer">
+		<span wicket:id="options">
+			<span style=\"white-space:nowrap;\">
+				<input type="radio" class="hotkey" wicket:id="optionInput" />
+				<span wicket:id="optionLabel" class="hotkey">optionLabel</span>
+			</span>
+			<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
+		</span>
+	</span>
+	<br />
 	<label for="otherSpecifyTextField" wicket:id="otherSpecifyLabel" >Other Specify: </label> 
 	<input wicket:id="otherSpecifyTextField" type="text" />  
 </wicket:extend>
