dontknow and refuse buttons are optional, improved error messages

--- a/src/net/sf/egonet/web/panel/DateAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/DateAnswerFormFieldPanel.html
@@ -7,8 +7,8 @@
         <tr>
         <td align="left" style="padding-left: 1px;padding-right: 1px;">
         <label wicket:id="lblHour">Time (HH:MM)</label></td>
-        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Hour" type="text" /></td>
-        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Minute" type="text" /></td>
+        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Hour" type="text" size="8" /></td>
+        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Minute" type="text" size="8" /></td>
         <td style="padding-left: 1px;padding-right: 1px;"><span wicket:id="ampm">
         <input type="radio"> AM </input>
         <input type="radio"> PM </input>
@@ -17,8 +17,8 @@
         <td align="right" style="padding-left: 1px;padding-right: 1px;">
         <label wicket:id="lblYear">Date (Month,Day,Year)</label></td> 
         <td style="padding-left: 1px;padding-right: 1px;"><select wicket:id="Month" /></td>
-        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Day" type="text" /></td>
-        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Year" type="text" /></td>
+        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Day" type="text" size="8" /></td>
+        <td style="padding-left: 1px;padding-right: 1px;"><input wicket:id="Year" type="text" size="8" /></td>
         </tr>
      </table>
     <br />
