--- a/src/net/sf/egonet/web/panel/MultipleSelectionLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/MultipleSelectionLimitsPanel.html
@@ -5,7 +5,7 @@
   
 <wicket:panel wicket:id="multipleSelectionLimitsPanel" >
     <form wicket:id = "form" >
-    	<table border="1"> 
+    	<table  border="0" bgcolor="#dddddd" > 
         	<tr><td colspan="2">Bounds for MULTIPLE_SELECTION Entry:</td></tr>
         	<tr><td>Minimum boxes to check:</td>
         	<td><input wicket:id="minMultipleSelectionEntry" type="text" size="10"/> </td>
