--- a/src/net/sf/egonet/web/panel/NumericLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/NumericLimitsPanel.html
@@ -11,7 +11,7 @@
 <!-- <body> -->
 <wicket:panel wicket:id="numericLimitsPanel" >
     <form wicket:id = "numericLimitsForm" >
-    	<table border="1"> 
+    	<table border="0" bgcolor="#dddddd" > 
         	<tr><td colspan="4">Bounds for NUMERICAL Entry:</td></tr>
         	<tr><span wicket:id="radioMin"><td>Min:</td>
         	<td><input type="radio" wicket:id="minLiteral" />Literal <input wicket:id="minLiteralEntry" type="text" size="10"/> </td>
