--- a/src/net/sf/egonet/web/panel/TimeSpanAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/TimeSpanAnswerFormFieldPanel.html
@@ -5,25 +5,25 @@
 <wicket:extend >
     <table>
         <tr>
-        <td><input wicket:id="Minutes" type="text" /></td>
+        <td><input wicket:id="Minutes" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblMinutes">Minutes</label></td>  
         </tr><tr>
-        <td><input wicket:id="Hours" type="text" /></td>
+        <td><input wicket:id="Hours" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblHours">Hours</label></td>  
         </tr><tr>
-        <td><input wicket:id="Days" type="text" /></td>
+        <td><input wicket:id="Days" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblDays">Days</label></td>  
         </tr><tr>
-        <td><input wicket:id="Weeks" type="text" /></td>
+        <td><input wicket:id="Weeks" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblWeeks">Weeks</label></td>
         </tr><tr>
-        <td><input wicket:id="Months" type="text" /></td>
+        <td><input wicket:id="Months" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblMonths">Months</label></td>
         </tr><tr> 
-        <td><input wicket:id="Years" type="text" /></td>
+        <td><input wicket:id="Years" type="text" size="5" /></td>
         <td align="left"><label wicket:id="lblYears">Years</label></td>
         </tr>
      </table>
-    
+    <br />
 	<span wicket:id="refDKCheck">Refuse and dont know checkboxes</span>
 </wicket:extend>
