--- a/src/net/sf/egonet/web/panel/ListLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/ListLimitsPanel.html
@@ -7,17 +7,27 @@
 
 <wicket:panel wicket:id = "listLimitsPanel" >
     <form wicket:id = "listLimitsForm" > 
-    <table border="0">
+    <table border="0" bgcolor="#dddddd" >
     <tr>
-    <td style="padding-left:0; padding-right:0; white-space:nowrap;" align="right">Use List Limit?</td>
-    <td style="padding-left:0; padding-right:0;"><input type="checkbox" wicket:id="withListRange" /></td>
-    <td style="padding-left:5px; padding-right:0; white-space:nowrap;">Response to count:</td>
-    <td style="padding-left:0; padding-right:0;" ><select wicket:id="listRangeString"></select></td>
-<!---    </tr><tr>  -->
-    <td style="padding-left:5px; padding-right:0;">Min:</td>
-    <td style="padding-left:0; padding-right:0;"><input type="text" wicket:id="min" /></td>
-    <td style="padding-left:5px; padding-right:0;">Max:</td>
-    <td style="padding-left:0; padding-right:0;"><input type="text" wicket:id="max" /></td>
+    <td style="padding-left:0; padding-right:0; white-space:nowrap;" align="right">Use List Limit?
+    	<input type="checkbox" wicket:id="withListRange" /></td>
+    <td style="padding-left:5px; padding-right:0; white-space:nowrap;">Response to count:
+    	<select wicket:id="listRangeString"></select></td>
+    <td colspan="2" style="padding-left:5px; padding-right:0;">Min:
+    	<input type="text" wicket:id="min" size="5" /></td>
+    <td colspan="2" style="padding-left:5px; padding-right:0;">Max:
+    	<input type="text" wicket:id="max" size="5" /></td>
+    </tr><tr>
+    <td style="padding-left:0; padding-right:0; white-space:nowrap;">PAGE-LEVEL Buttons: </td>
+    <td style="padding-left:4px; padding-right:0;" align="right">
+    	Don't know<input type="checkbox" wicket:id="dontknow" /></td>	
+    <td style="padding-left:4px; padding-right:0;" >Refuse
+    	<input type="checkbox" wicket:id="refuse" /></td>
+    <td style="padding-left:4px; padding-right:0;" >None
+    	<input type="checkbox" wicket:id="none" /></td>
+    <td style="padding-left:4px; padding-right:0;" >All
+    	<input type="checkbox" wicket:id="all" /></td>
+    <td style="padding-left:0; padding-right:0;"><select wicket:id="allOption"></select></td>          
     </tr>
     </table>
     </form>
