--- a/src/net/sf/egonet/web/panel/ListLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/ListLimitsPanel.html
@@ -11,23 +11,25 @@
     <tr>
     <td style="padding-left:0; padding-right:0; white-space:nowrap;" align="right">Use List Limit?
     	<input type="checkbox" wicket:id="withListRange" /></td>
-    <td style="padding-left:5px; padding-right:0; white-space:nowrap;">Response to count:
-    	<select wicket:id="listRangeString"></select></td>
-    <td colspan="2" style="padding-left:5px; padding-right:0;">Min:
+    <td colspan="2" style="padding-left:4px; padding-right:0;">Min:
     	<input type="text" wicket:id="min" size="5" /></td>
-    <td colspan="2" style="padding-left:5px; padding-right:0;">Max:
+    <td colspan="2" style="padding-left:4px; padding-right:0;">Max:
     	<input type="text" wicket:id="max" size="5" /></td>
-    </tr><tr>
+    <td style="padding-left:5px; padding-right:0; white-space:nowrap;" align="right">Count Response:
+    	<select wicket:id="listRangeString"></select></td>
+    </tr> 
+    <tr>
     <td style="padding-left:0; padding-right:0; white-space:nowrap;">PAGE-LEVEL Buttons: </td>
-    <td style="padding-left:4px; padding-right:0;" align="right">
-    	Don't know<input type="checkbox" wicket:id="dontknow" /></td>	
+    <td style="padding-left:4px; padding-right:0;">Don't know
+    	<input type="checkbox" wicket:id="dontknow" /></td>	
     <td style="padding-left:4px; padding-right:0;" >Refuse
     	<input type="checkbox" wicket:id="refuse" /></td>
     <td style="padding-left:4px; padding-right:0;" >None
     	<input type="checkbox" wicket:id="none" /></td>
     <td style="padding-left:4px; padding-right:0;" >All
     	<input type="checkbox" wicket:id="all" /></td>
-    <td style="padding-left:0; padding-right:0;"><select wicket:id="allOption"></select></td>          
+    <td style="padding-left:0; padding-right:0;" align="right">'All' Response:
+         <select wicket:id="allOption"></select></td>          
     </tr>
     </table>
     </form>
