--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -41,9 +41,10 @@
                         <input wicket:id="otherSpecifyField" id= "otherSpecifyField" type="checkbox" /> 
                         </td></tr>
                         <tr>
-                        <td align="right">Optional Buttons: </td>
-                        <td>Don't know<input type="checkbox" wicket:id="dontknow" /> &nbsp;&nbsp;&nbsp;	
-    					 Refuse <input type="checkbox" wicket:id="refuse" /></td>
+                        <td align="right"><label wicket:id="optionalButtons">Optional Buttons: </label></td>
+                        <td><label wicket:id="dontKnowBtn">Don't know</label>
+                        <input type="checkbox" wicket:id="dontknow" /> &nbsp;&nbsp;&nbsp;	
+    					<label wicket:id="refuseBtn">Refuse </label><input type="checkbox" wicket:id="refuse" /></td>
     					</tr>
                 <!--    <tr><td align="right">                                                          -->
                 <!--    <label for="noneButtonField" wicket:id="noneButtonLabel">NONE Button?: </label> -->
