--- a/src/net/sf/egonet/web/panel/InterviewingPanel.html
+++ b/src/net/sf/egonet/web/panel/InterviewingPanel.html
@@ -13,11 +13,14 @@
 	</table>
 	
 	<br />
-<!-- we may want to replace the Don't know & Refuse check boxes with buttons  -->                    	
-<!--	<input wicket:id="btnDontKnow" style="margin-left:2em" type="submit" value="Don't know" /> -->
-<!--	&nbsp;&nbsp;                                                                               -->
-<!--	<input wicket:id="btnRefuse"   type="submit" value="Refuse"/>                              -->
-<!--	<br />                                                                                     -->
+    <form wicket:id="pageButtonsForm"> 	
+	    <input wicket:id="btnAll" style="margin-left:2em" type="submit" value="All" /> 
+	    <span  wicket:id="btnAllLabel">(Set all to ----)</span>
+	    &nbsp;&nbsp;                                                                   
+	    <input wicket:id="btnDontKnow" type="submit" value="Don't know" />             
+	    &nbsp;&nbsp;                                                                                       
+	    <input wicket:id="btnRefuse"   type="submit" value="Refuse"/>                                  
+	</form>                                                                                
 	<span wicket:id="refDKCheck" style="margin-left:10em">Refuse and dont know checkboxes</span>
 
 </wicket:panel>
