--- a/src/net/sf/egonet/web/panel/ListLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/ListLimitsPanel.html
@@ -20,9 +20,9 @@
     </tr> 
     <tr>
     <td style="padding-left:0; padding-right:0; white-space:nowrap;">PAGE-LEVEL Buttons: </td>
-    <td style="padding-left:4px; padding-right:0;">Don't know
+    <td style="padding-left:4px; padding-right:0;">DON'T KNOW
     	<input type="checkbox" wicket:id="dontknow" /></td>	
-    <td style="padding-left:4px; padding-right:0;" >Refuse
+    <td style="padding-left:4px; padding-right:0;" >REFUSE
     	<input type="checkbox" wicket:id="refuse" /></td>
     <td style="padding-left:4px; padding-right:0;" >None
     	<input type="checkbox" wicket:id="none" /></td>
