Fix a formatting issue for selection questions: there was sometimes a line break between a radio button and its label.

--- a/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
+++ b/src/net/sf/egonet/web/panel/SelectionAnswerFormFieldPanel.html
@@ -2,10 +2,10 @@
 	<br />
 	<span wicket:id="answer">
 		<span wicket:id="options">
-			<span style=\"white-space:nowrap;\">
+			<nobr>
 				<input type="radio" class="hotkey" wicket:id="optionInput" />
 				<span wicket:id="optionLabel" class="hotkey">optionLabel</span>
-			</span>
+			</nobr>
 			<span style="whitespace:pre-wrap; color:#ffffff"> . . </span>
 		</span>
 	</span>
