fixed alter name breaks in firefox

--- a/src/net/sf/egonet/web/panel/InterviewingPanel.html
+++ b/src/net/sf/egonet/web/panel/InterviewingPanel.html
@@ -16,9 +16,9 @@
     <form wicket:id="pageButtonsForm"> 	
 	    <a href="#" wicket:id="btnAll"><span wicket:id="btnAllLabel" > Set All To... </span></a> 
 	    &nbsp;&nbsp;                                                                   
-	    <a href="#" wicket:id="btnDontKnow"> DON'T KNOW </a>             
+	    <a href="#" wicket:id="btnDontKnow"> DON'T KNOW ALL </a>             
 	    &nbsp;&nbsp;                                                                                       
-	    <a href="#" wicket:id="btnRefuse"> REFUSE </a>                                  
+	    <a href="#" wicket:id="btnRefuse"> REFUSE ALL </a>                                  
 	</form>                                                                                
 	<span wicket:id="refDKCheck" style="margin-left:10em">Refuse and dont know checkboxes</span>
 
