Added NETWORK question type to Egoweb, drawing alter graph from interviewee response
This commit includes substantial additions to Egoweb, working from the question and network-rendering framework already in place. The NETWORK question type uses the JUNG library to draw a graph with the interviewee's alters as nodes, with edges set by an Expression chosen during the interview-creation process. The node shape/size/color and edge width/color can be configured to vary based on the interviewee's answers, or they can be left set to their defaults. NETWORK questions will be asked at the end of the interview, before the conclusion page is shown.

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -61,6 +61,26 @@
                             <div wicket:id="timeUnitsPanel"></div>
                         </td></tr>          
                         </table>
+    	 				
+    	 				<br />
+    	 				<label for="networkRelationshipField" wicket:id="networkRelationshipLabel">Alters are adjacent when:</label>
+    	 				<select wicket:id="networkRelationshipField" id="networkRelationshipField" />
+    	 				<br />
+    	 				<label for="networkNodeShapeField" wicket:id="networkNodeShapeLabel">Alter attribute for network node shape:</label>
+    	 				<select wicket:id="networkNodeShapeField" id="networkNodeShapeField" />
+    	 				<br />
+    	 				<label for="networkNodeColorField" wicket:id="networkNodeColorLabel">Alter attribute for network node color:</label>
+    	 				<select wicket:id="networkNodeColorField" id="networkNodeColorField" />
+    	 				<br />
+    	 				<label for="networkNodeSizeField" wicket:id="networkNodeSizeLabel">Alter attribute for network node size:</label>
+    	 				<select wicket:id="networkNodeSizeField" id="networkNodeSizeField" />
+    	 				<br />
+    	 				<label for="networkEdgeColorField" wicket:id="networkEdgeColorLabel">Alter attribute for network edge color:</label>
+    	 				<select wicket:id="networkEdgeColorField" id="networkEdgeColorField" />
+    	 				<br />
+    	 				<label for="networkEdgeSizeField" wicket:id="networkEdgeSizeLabel">Alter attribute for network edge size:</label>
+    	 				<select wicket:id="networkEdgeSizeField" id="networkEdgeSizeField" />
+    	 				<br />
     	 			</td>
     	 			<td width="50%">
     					<label for="questionPromptField">Prompt</label>
