first work on nonsymmetric alter-pair questions

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -22,11 +22,6 @@
                         </td><td>
     	 				<select wicket:id="questionAnswerReasonField" id="questionAnswerReasonField" />
                         </td></tr>
-               <!--          <tr><td align="right" >                                    -->
-               <!--          <label for="questionUseIfField">Use If expression:</label> -->
-               <!--          </td><td>                                                  -->
-               <!--          <input wicket:id="questionUseIfField" id="questionUseIfField" type="text"  size="35"/> -->
-               <!--          </td></tr>                                                  -->
                         <tr><td align="right">
     	 				<label for="askingStyleListField" wicket:id="askingStyleListLabel">Ask with list of alters:</label>
     	 				</td><td>
@@ -40,17 +35,17 @@
                         </td><td> 
                         <input wicket:id="otherSpecifyField" id= "otherSpecifyField" type="checkbox" /> 
                         </td></tr>
+                        <tr><td align="right"> 
+                        <label for="symmetricField" wicket:id="symmetricLabel">Symmetric Question?: </label> 
+                        </td><td> 
+                        <input wicket:id="symmetricField" id= "symmetricField" type="checkbox" /> 
+                        </td></tr>
                         <tr>
                         <td align="right"><label wicket:id="optionalButtons">Optional Buttons: </label></td>
                         <td><label wicket:id="dontKnowBtn">Don't know</label>
                         <input type="checkbox" wicket:id="dontknow" /> &nbsp;&nbsp;&nbsp;	
     					<label wicket:id="refuseBtn">Refuse </label><input type="checkbox" wicket:id="refuse" /></td>
     					</tr>
-                <!--    <tr><td align="right">                                                          -->
-                <!--    <label for="noneButtonField" wicket:id="noneButtonLabel">NONE Button?: </label> -->
-                <!--    </td><td>                                                                       -->
-                <!--    <input wicket:id="noneButtonField" id= "noneButtonField" type="checkbox" />     -->
-                <!--    </td></tr>                                                                      -->
                         <tr><td colspan="2">
                             <div wicket:id="numericLimitsPanel"></div>
                         </td></tr>
