--- a/src/net/sf/egonet/web/panel/ListLimitsPanel.html
+++ b/src/net/sf/egonet/web/panel/ListLimitsPanel.html
@@ -11,11 +11,11 @@
     <tr>
     <td style="padding-left:0; padding-right:0; white-space:nowrap;" align="right">Use List Limit?
     	<input type="checkbox" wicket:id="withListRange" /></td>
-    <td colspan="2" style="padding-left:4px; padding-right:0;">Min:
+    <td style="padding-left:4px; padding-right:0;">Min:
     	<input type="text" wicket:id="min" size="5" /></td>
-    <td colspan="2" style="padding-left:4px; padding-right:0;">Max:
+    <td style="padding-left:4px; padding-right:0;">Max:
     	<input type="text" wicket:id="max" size="5" /></td>
-    <td style="padding-left:5px; padding-right:0; white-space:nowrap;" align="right">Count Response:
+    <td colspan="2"style="padding-left:5px; padding-right:0; white-space:nowrap;" align="right">Count Response:
     	<select wicket:id="listRangeString"></select></td>
     </tr> 
     <tr>
@@ -26,10 +26,10 @@
     	<input type="checkbox" wicket:id="refuse" /></td>
     <td style="padding-left:4px; padding-right:0;" >None
     	<input type="checkbox" wicket:id="none" /></td>
-    <td style="padding-left:4px; padding-right:0;" >All
+    <td style="padding-left:4px; padding-right:0;" >Set Alls
     	<input type="checkbox" wicket:id="all" /></td>
-    <td style="padding-left:0; padding-right:0;" align="right">'All' Response:
-         <select wicket:id="allOption"></select></td>          
+ <!--   <td style="padding-left:0; padding-right:0;" align="right">'All' Response: -->
+ <!--        <select wicket:id="allOption"></select></td>                          -->
     </tr>
     </table>
     </form>
