Added option to put multiple questions on a page

--- a/src/net/sf/egonet/web/panel/EditQuestionPanel.html
+++ b/src/net/sf/egonet/web/panel/EditQuestionPanel.html
@@ -27,6 +27,11 @@
     	 				</td><td>
     	 				<input wicket:id="askingStyleListField" id= "askingStyleListField" type="checkbox" />
                         </td></tr>
+                        <tr><td align="right">
+    	 				<label for="keepOnSamePageField" wicket:id="keepOnSamePageLabel">Keep on page with prev question?:</label>
+    	 				</td><td>
+    	 				<input wicket:id="keepOnSamePageField" id="keepOnSamePageField" type="checkbox" />
+                        </td></tr>                       
                         <tr><td colspan="2">
                             <div wicket:id="listLimitsPanel"></div>
                         </td></tr>
